# android

./: .gitignore  .metadata  README.md  pubspec.yaml  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/promtuz/chat/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  core_bindings.h  wasm-core.cpp
app/src/main/java/com/promtuz/chat/: LauncherActivity.kt  MainActivity.kt  Promtuz.kt
app/src/main/java/com/promtuz/core/: API.kt  Const.kt  Core.kt  Crypto.kt
app/src/main/res/raw/: resolver_seeds.json  root_ca.pem
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/rust/: Cargo.toml  build
app/src/main/rust/base/: Cargo.toml
app/src/main/rust/base/src/: lib.rs
app/src/main/rust/core/: Cargo.toml
app/src/main/rust/core/src/: lib.rs
app/src/main/rust/core/src/crypto/: chacha20.rs  dh.rs  x25519.rs
app/src/main/rust/core/src/data/: relay.rs
app/src/main/rust/core/src/db/: mod.rs  relays.sql
app/src/main/rust/core/src/quic/: server.rs
app/src/main/rust/core/src/utils/: mod.rs  sqlite.rs
app/src/main/rust/src/: insecure.rs  lib.rs  quic.rs  utils.rs
app/src/main/rust/src/crypto/: chacha20.rs  dh.rs  mod.rs  x25519.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: app.dart  main.dart
lib/data/demo/: demo_chats.dart
lib/navigation/: root.dart
lib/screens/: home.dart
lib/ui/: theme.dart
lib/ui/components/: home_top_bar.dart
(+116 files in other folders)
