[package]
name = "core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.15"
common = { path = "../../../../../../common", features = ["crypto","sign", "msg"]}
jni = "0.21.1"
log = "0.4.28"
once_cell = "1.21.3"
quinn = { version = "0.11.9", features = ["rustls"] }
tokio = { version = "1.48.0", features = ["full"] }
macros = { path = "../macros" }
rand = "0.9.2"
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
hex = "0.4.3"
